<resources>
    <string name="app_name">Mobi Tarantino</string>
    <string name="prompt_phone">Номер телефона</string>
    <string name="action_view_agreement_caption">Прочитайте оферту. Входя в приложение, вы принимаете ее условия</string>
    <string name="action_view_why_needed_phone">Узнайте, зачем приложению ваш номер</string>
    <string name="title_phone">Номер телефона</string>
    <string name="title_apply_code">Код подтверждения</string>
    <string name="error_invalid_phone">This phone is too short</string>
    <string name="action_send_sms">Выслать SMS с кодом</string>
    <string name="action_send_code">Отправить код</string>
    <string name="label_send_sms_to">SMS с кодом отправлено на %1$2s. Введите код, чтобы войти в приложение.</string>
    <string name="label_send_sms_again">Выслать код снова через 30 сек.</string>
    <string name="label_code_from_sms">Код из SMS</string>
    <string name="menu_send">Отправить</string>
    <string name="garage">Garage</string>
    <string name="label_sms_about_fines">SMS о новых штрафах</string>
    <string name="label_cars">Автомобили</string>
    <string name="label_drivers">Водители</string>
    <string name="label_cards">Мои банковские карты</string>
    <string name="label_exit">Выйти</string>
    <string name="navigation_services">Сервизы</string>
    <string name="navigation_fines">Фуражки</string>
    <string name="navigation_traffic_laws">Углы</string>
    <string name="navigation_driver_assistance">Помощь</string>
    <string name="navigation_profile">Профиль</string>
    <string name="pay_all">оплатить все</string>
    <string name="more">подробнее</string>
    <string name="check_fines">проверить штрафы</string>
    <string name="add_documents">добавить документы</string>
    <string name="changes_in_traffic_laws">изменения в Углах</string>
    <string name="traffic_law_change">Изменение</string>
    <string name="read">Читать далее</string>
    <string name="other_changes">другие изменения</string>
    <string name="close">закрыть</string>
    <string name="ai92">92</string>
    <string name="ai95">95</string>
    <string name="ai98">98</string>
    <string name="diesel">дизель</string>
    <string name="driver_assistance">помощь на дороге</string>
    <string name="emergency">Служба спасения</string>
    <string name="common_emergency_phone">112</string>
    <string name="other_phones">другие телефоны</string>
    <string name="your_opinion">ваше мнение</string>
    <string name="load_data_error">При загрузке произошла ошибка</string>
    <string name="retry">повторить</string>
    <plurals name="finesCount">
        <item quantity="one">%d штраф</item>
        <item quantity="two">%d штрафа</item>
        <item quantity="few">%d штрафа</item>
        <item quantity="many">%d штрафов</item>
        <item quantity="other">%d штрафов</item>
    </plurals>
    <string name="finesWithDiscountCountSuffix">%s учетом скидки</string>
    <string name="finesCountSuffix">%s к оплате</string>
    <string name="rouble">р.</string>
    <string name="finesMoneyCount">%d р.</string>
    <string name="moneyWithRouble">%s р.</string>
    <string name="fuelPrice">%.2f р.</string>
    <string name="no_fines">Нет штрафов</string>
    <string name="no_documents">Нет документов</string>
    <string name="paid">Оплаченные</string>
    <string name="no_paid_fines">Нет оплаченных штрафов</string>
    <string name="non_paid">Неоплаченные</string>
    <string name="data_loading">идет загрузка…</string>
    <string name="fuel_in_moscow">топливо в Москве</string>
    <string name="fuel_in_russia">топливо в России</string>
    <string name="pay">Оплатить</string>
    <string name="pay_with_rouble">Оплатить %s р.</string>
    <string name="new_fines_notification">Уведомления о новых штрафах</string>
    <string name="new_fine">Новый штраф</string>
    <string name="new_event">Новая акция</string>
    <string name="new_law">Новое изменение ПДД</string>
    <string name="settings_update_failed">При изменении настроек произошла ошибка</string>
    <string name="empty_driver_list">нет водителей</string>
    <string name="hint_driver_licence_number">Номер водительского удостоверения</string>
    <string name="driver_license">Водительское удостоверение</string>
    <string name="driver_licence_number_example">00AA000000</string>
    <string name="driver_name">Имя водителя</string>
    <string name="document_update_failed">При обновлении произошла ошибка</string>
    <string name="create_failed">При создании произошла ошибка</string>
    <string name="document_create_success">Документ создан успешно</string>
    <string name="document_update_success">Документ обновлен успешно</string>
    <string name="document_create_progress">Идет создание документа…</string>
    <string name="document_update_progress">Идет обновление документа…</string>
    <string name="driver_license_number_input_error">Укажите номер водительского удостоверения</string>
    <string name="driver_name_input_error">Укажите имя</string>
    <string name="delete">Удалить</string>
    <string name="document_remove_progress">Документ удаляется…</string>
    <string name="document_remove_failed">При удалении документа произошла ошибка</string>
    <string name="document_remove_success">Документ удален успешно</string>
    <string name="title_paid_fine">Оплаченный штраф</string>
    <string name="paidData">Данные для оплаты</string>
    <string name="paidWithTax">Оплачено с комиссией</string>
    <string name="send_money">Перечислено</string>
    <string name="paidDate">Дата платежа</string>
    <string name="transactionNumber">Номер операции</string>
    <string name="receipt">Квитанция платежа</string>
    <string name="title_receipt">Квитанция</string>
    <string name="fine">Штраф</string>
    <string name="decree">Постановление %s</string>
    <string name="TIN">Visa mobi Wallet\nИНН 3123011520</string>
    <string name="sent_to_email">Отправить на эл. почту</string>
    <string name="save_to_gallery">Сохранить в галерею</string>
    <string name="support">Служба поддержки</string>
    <string name="phone">Телефон</string>
    <string name="support_phone">8 800 707–77–59</string>
    <string name="email">Электронная почта</string>
    <string name="support_email">support@mobi.ru</string>
    <string name="operator">Оператор</string>
    <string name="phoneNumber">Номер телефона/счета</string>
    <string name="vehicle_certificate_number">Номер СТС</string>
    <string name="license_plate">Гос. номер</string>
    <string name="car_name_for_list">Имя автомобиля в списке</string>
    <string name="car_name_input_error">Укажите имя автомобиля</string>
    <string name="license_plate_input_error">Форматы госномера A000AA00, A000AA000, АА00000, АА000000</string>
    <string name="add">Добавить</string>
    <string name="add_car">Добавить авто</string>
    <string name="add_driver">Добавить водителя</string>
    <string name="help">Помощь</string>
    <string name="default_city">Москва</string>
    <string name="empty_car_list">Нет автомобилей</string>
    <string name="no_new_laws">Нет новых изменений в ПДД</string>
    <string name="demo_tour">Демо тур</string>
    <string name="tour_1_label">Все о фуражках</string>
    <string name="tour_1_text">Проверка и оплата фуражек, новое в DDD, цены на воздух и не только</string>
    <string name="tour_2_label">Фуражки со скидкой 50%</string>
    <string name="tour_2_text">Уведомим о новых фуражках, чтобы вы платили со скидкой, и сохраним квитанцию</string>
    <string name="tour_3_label">Ждите обновление</string>
    <string name="tour_3_text">Оплата парковки фур и покупка ГУСЯ на подходе</string>
    <string name="next">Продолжить</string>
    <string name="check_phone_number">При запросе авторизации произошла ошибка</string>
    <string name="auth_request">Идет запрос авторизации…</string>
    <string name="check_sms_code">Произошла ошибка. Проверьте код из смс</string>
    <string name="auth_progress">Идет авторизация…</string>
    <string name="send_sms_timer_pattern">Повторить отправку смс с кодом через %d сек.</string>
    <string name="title_fine_payment">Оплата штрафов</string>
    <string name="discount_until_date">Скидка до %s</string>
    <string name="taxCount">Комиссия %1$s, минимум %2$s р.</string>
    <string name="paidAmountWithTax">Сумма платежа с комиссией</string>
    <string name="payer_name">Введите ФИО плательщика</string>
    <string name="card_name">Номер карты</string>
    <string name="cardDate">ММ ГГ</string>
    <string name="cardCVV">CVV</string>
    <string name="empty_payer_name">Поле ФИО плательщика не может быть пустым</string>
    <string name="cardDate_is_out_out_of_date_input_error">Карта просрочена</string>
    <string name="cardDate_input_error">Дата некорректна</string>
    <string name="cardDate_month_input_error">Месяц некорректен</string>
    <string name="cardDate_year_input_error">Год некорректен</string>
    <string name="cardCVV_input_error">CVV некорректен</string>
    <string name="card_name_input_error">Номер карты некорректен</string>
    <string name="title_payment_confirmation">Подтверждение оплаты</string>
    <string name="license_number_input_error">Укажите номер СТС</string>
    <string name="offer_url">https://static.mobi.com/ru/doc/oferta_lk.pdf</string>
    <string name="why_needed_phone_url">https://m.mobi.com/ru/company/oferta.action</string>
    <string name="update_play_services_notification">Доступны не все функции приложения. Установите/обновите Google Play Services</string>
    <string name="mobi_auto">Mobi auto</string>
    <string name="partner_event">Акция</string>
    <string name="why_needed_phone">Вы сможете войти в приложение с другого устройства</string>
    <string name="driver_create_success">Водитель успешно создан</string>
    <string name="driver_create_progress">Идет создание водителя…</string>
    <string name="driver_update_success">Водитель обновлен успешно</string>
    <string name="driver_update_progress">Идет обновление водителя…</string>
    <string name="driver_remove_success">Водитель удален успешно</string>
    <string name="driver_remove_progress">Водитель удаляется…</string>
    <string name="driver_duplicate_error">Данный водитель уже есть в списке</string>
    <string name="car_create_success">Автомобиль успешно создан</string>
    <string name="car_create_progress">Идет создание автомобиля…</string>
    <string name="car_update_success">Автомобиль обновлен успешно</string>
    <string name="car_update_progress">Идет обновление автомобиля…</string>
    <string name="car_remove_success">Автомобиль удален успешно</string>
    <string name="car_remove_progress">Автомобиль удаляется…</string>
    <string name="car_duplicate_error">Данный автомобиль уже есть в списке</string>
    <string name="document_crud_error_template">Ошибка. Проверьте введенные данные </string>
    <string name="toast_fine_is_paid">Штраф оплачен. В течении 3-х дней штраф будет погашен в ГИБДД</string>
    <string name="unavaliable_internet_error">Отсутствует подключение к интернет</string>
    <string name="no_fine_receipt_found">Информация об оплате штрафа для данного аккаунта не найдена. Возможно, оплата была с другого аккаунта?</string>
    <string name="notifications">Уведомления</string>
    <string name="new_fine_notification_title_pattern">У вас %s</string>
    <string name="my_car">Мой автомобиль</string>
    <string name="my_driver_license">Мои права</string>
    <string name="we_notify_you">Мы будем уведомлять вас о новых штрафах и изменениях ПДД</string>
    <string name="send_code_limit_exceeded">Превышен лимит ввода СМС кода</string>
    <string name="enter_full_code">Введите полный СМС код</string>
    <string name="are_you_sure_you_want_to_exit">Вы уверены, что хотите выйти?</string>
    <string name="are_you_sure_you_want_to_delete_car">Вы уверены, что хотите удалить автомобиль?</string>
</resources>