<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="280dp"
            android:layout_height="290dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/image_main"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal|bottom"
                app:srcCompat="@drawable/demo_tour_3_animation" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_textView"
                style="@style/text_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tour_3_label"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_textView"
                style="@style/text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/tour_3_text"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="@drawable/button_orange"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>