<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".feature.auth.AuthActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loadingView"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorView"
        style="?android:textAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="+- 1234567890"
                    android:drawableLeft="@drawable/flag_ru"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:hint="@string/prompt_phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/bg_cursor" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/agreement_textView"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/list_selector_background"
                android:clickable="true"
                android:text="@string/action_view_agreement_caption"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/why_needed_phone_textView"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/list_selector_background"
                android:clickable="true"
                android:text="@string/action_view_why_needed_phone"
                android:textColor="@color/yellowish_orange"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
